Fix vertical alignment of tags

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -75,8 +75,7 @@ i:hover.icon-social {
 }
 
 .post-tags {
-    margin-top: -.5rem;
-    margin-bottom: 1rem;
+    margin-top: -1.4rem;
     float: right;
     font-family: $mono-family;
     font-size: 13px;
